fix: interval type ENUM으로 설정 반영